# Kimi-Intraday-Dashboard

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  system_design_final.md
docs/: backend-api-gaps.md
engine/: Dockerfile  config.py  main.py  pyproject.toml
engine/api/: rest_routes.py  websocket_manager.py
engine/core/: pipeline.py  telemetry.py
engine/core/alerts/: telegram.py
engine/core/auth/: token_manager.py
engine/core/data/: nse_scraper.py  redis_cache.py  upstox_rest.py  upstox_ws.py
engine/core/scheduler/: holidays.py  market_scheduler.py
engine/core/session/: market_session.py
engine/db/: timescale.py
engine/db/migrations/: 001_initial.sql  002_continuous_aggs.sql
engine/layers/: l10_edge.py  l1_market_context.py  l2_universe.py  l3_indicators.py  l3_options.py  l3_reference_levels.py  l3_signals.py  l3_volume_seasonality.py  l4_sector.py  l5_scoring.py  l6_ranking.py  l7_confluence.py  l8_cost_model.py  l8_thesis.py  l8_time_decay.py  l9_monitor.py
engine/layers/l8_setups/: __init__.py  cpr_breakout.py  first_hour_breakout.py  mean_reversion.py  orb_15.py  supertrend_pullback.py  vwap_reclaim.py
engine/models/: __init__.py  enums.py  factors.py  frames.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_deprecation.py  test_factors_api.py  test_health.py  test_holidays.py  test_l1.py  test_l10.py  test_l10_tiers.py  test_l1_regime.py  test_l2.py  test_l3.py  test_l3_new_modules.py  test_l3_oi.py  test_l4.py  test_l5.py  test_l5_direction.py  test_l6.py  (+28 more)
(+94 files in other folders)
