[project]
name = "intraday-engine"
version = "0.1.0"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.4.66b0",
    "scipy>=1.11.0",
    "structlog>=24.1.0",
    "python-telegram-bot>=20.7",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["api", "models", "db", "core", "core.data", "api.*", "models.*", "db.*", "core.*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
